# Agentech-Edge-Project-Scenario-People-Check-SPC-LV1.5-SKILLS

./: .gitignore  README.en.md  README.md  README.zh-CN.md  pyproject.toml
apps/iphone-capture/: README.md
apps/mac-console/: README.md
config/: school.example.toml
db/: schema.sql
docs/: api.md  architecture.md  database-memory-skills-terminal.md  decisions.md  pricing.md  privacy-and-consent.md  product-roadmap.md  sdk.md
logs/: project-log.md
scripts/: README.md
services/camera-watch/: README.md
services/recognition-worker/: README.md
src/sa_attendance_system/: __init__.py  api.py  cli.py  db.py  repository.py  sdk.py  service.py  utils.py  vision.py
tests/: test_face_api_service.py
