[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentech-spc-lv15-skills"
version = "0.1.0"
description = "Agentech Edge Project - Scenario People Check (SPC) - LV1.5 SKILLS."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Agentech" }
]
dependencies = []

[project.optional-dependencies]
vision = ["numpy", "opencv-python", "Pillow"]

[project.scripts]
sa-attendance = "sa_attendance_system.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sa_attendance_system = ["resources/*.sql"]
